--- a/src/components/Cart/index.css
+++ b/src/components/Cart/index.css
@@ -5,18 +5,26 @@
 }
 
 .remove-all-btn{
-  background-color: #f44336;
-  color: white;
-  border: none;
+  background-color: transparent;
+  color: #0b69ff;
+  border: 1px solid #0b69ff;
   padding: 10px 20px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  font-size: 12px;
+  font-size: 14px;
   margin: 4px 2px;
   cursor: pointer;
   border-radius: 5px;
   width: auto;
+  position: relative;
+  overflow: hidden;
+  transition: background 0.3s ease-in-out;
+}
+
+.remove-all-btn:hover {
+  background-color: #0b69ff;
+  color: white;
 }
 
 @media screen and (min-width: 768px) {
