--- a/src/components/Header/index.css
+++ b/src/components/Header/index.css
@@ -1,8 +1,17 @@
+
 .nav-header {
   display: flex;
   justify-content: center;
   border-bottom: 1px solid rgb(243, 243, 243);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background-color: white; 
+  z-index: 1000;
+  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1); 
 }
+
 
 @media screen and (max-width: 767px) {
   .nav-header {
