--- a/src/components/Payment/index.css
+++ b/src/components/Payment/index.css
@@ -1,9 +1,12 @@
 .payments-container {
-    padding: 25px;
-    background-color: #dddcdc;
-    border-radius: 16px;
-    display: flex;
-    flex-direction: column;
+  padding: 25px;
+  background-color: #fff;
+  border-radius: 16px;
+  display: flex;
+  flex-direction: column;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
+  position: relative; 
+  z-index: 10; 
   }
   
   .payments-heading {
