--- a/src/App.css
+++ b/src/App.css
@@ -9,5 +9,31 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  padding-top: 80px;
+  padding-top: 80px; /* Default for large screens */
 }
+
+/* Responsive Padding */
+@media (max-width: 1024px) {  /* Tablets & smaller desktops */
+  body {
+    padding-top: 80px;
+  }
+}
+
+@media (max-width: 768px) {  /* Tablets & Large Phones */
+  body {
+    padding-top: 90px;
+  }
+}
+
+@media (max-width: 480px) {  /* Small Phones */
+  body {
+    padding-top: 130px;
+  }
+}
+
+@media (max-width: 360px) {  /* Extra Small Phones */
+  body {
+    padding-top: 150px;
+  }
+}
+
