--- a/src/components/Payment/index.css
+++ b/src/components/Payment/index.css
@@ -4,9 +4,10 @@
   border-radius: 16px;
   display: flex;
   flex-direction: column;
-  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   position: relative; 
   z-index: 10; 
+  width: 100%;
   }
   
   .payments-heading {
